--- a/src/sass/sections/_section-links.scss
+++ b/src/sass/sections/_section-links.scss
@@ -53,3 +53,10 @@
   }
 
 }
+
+@media (max-width: 600px) {
+  .links__row {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
